<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_indent"
    android:backgroundTint="@color/dark_black"
    app:cardCornerRadius="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_logout_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="@dimen/default_indent"
            android:background="@color/orange"
            android:text="@string/sign_out_string"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/default_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_logout_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/default_indent"
            android:gravity="center"
            android:textSize="@dimen/small_text_size"
            android:text="@string/sign_out_message_string"
            android:textColor="@color/text_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/default_indent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_logout_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_indent"
                android:backgroundTint="@color/button_color"
                android:text="@string/exit_string"
                android:layout_weight="1"
                android:textColor="@color/button_text_color"
                android:textSize="@dimen/default_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_logout_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_indent"
                android:backgroundTint="@color/button_color"
                android:text="@string/cancel_string"
                android:layout_weight="1"
                android:textColor="@color/button_text_color"
                android:textSize="@dimen/default_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>