<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_indent"
    android:backgroundTint="@color/dark_black"
    app:cardCornerRadius="24dp">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_edit_display_name_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:gravity="center"
            android:paddingVertical="@dimen/default_indent"
            android:text="@string/change_password_dialog_title_string"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/default_text_size"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/ll_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlt_enter_old_password"
                style="@style/input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_indent"
                android:layout_marginTop="@dimen/default_indent"
                android:hint="@string/old_password_string"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/text_input_box_stroke">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_enter_old_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/default_text_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlt_enter_new_password"
                style="@style/input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_indent"
                android:layout_marginTop="@dimen/default_indent"
                android:hint="@string/new_password_string"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/text_input_box_stroke">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_enter_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/default_text_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlt_enter_confirm_new_password"
                style="@style/input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_indent"
                android:layout_marginVertical="@dimen/default_indent"
                android:hint="@string/confirm_new_password_string"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/text_input_box_stroke">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_enter_confirm_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/default_text_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="@dimen/default_indent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_change_password_confirm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/default_indent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/button_color"
                    android:text="@string/ready_profile_string"
                    android:textColor="@color/button_text_color"
                    android:textSize="@dimen/default_text_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_change_password_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/default_indent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/button_color"
                    android:text="@string/cancel_string"
                    android:textColor="@color/button_text_color"
                    android:textSize="@dimen/default_text_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>