<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/motion_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_indent"
    app:layoutDescription="@xml/profile_motion_scene"
    tools:context=".fragment.profilefragment.ProfileFragment">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_user_image_profile"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/large_indent"
        android:backgroundTint="@color/card_view_user_info_bg"
        android:elevation="6dp"
        app:cardCornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_user_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/default_user_photo" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/photo_menu_container"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:elevation="8dp"
        android:translationZ="16dp"
        app:cardBackgroundColor="@color/orange"
        app:cardCornerRadius="28dp"
        app:cardElevation="16dp"
        app:layout_constraintEnd_toEndOf="@id/cv_user_image_profile"
        app:layout_constraintTop_toTopOf="@id/cv_user_image_profile">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/photo_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:alpha="1"
                android:src="@drawable/ic_add_photo"
                app:tint="@color/enabled_button_text_color" />

            <LinearLayout
                android:id="@+id/menu_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0"
                android:visibility="gone"
                android:orientation="vertical"
                android:padding="12dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp">

                    <TextView
                        android:id="@+id/menu_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/choice_method_string"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/text_color"/>

                    <ImageButton
                        android:id="@+id/btn_close"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:padding="8dp"
                        android:src="@drawable/ic_close"
                        android:contentDescription="@string/close_string"
                        app:tint="@color/text_color" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="6dp"
                    android:background="#1FFFFFFF"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_camera"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:gravity="start|center_vertical"
                    android:text="@string/make_photo"
                    android:textSize="16sp"
                    android:textColor="@color/text_color"
                    app:icon="@drawable/ic_camera"
                    app:iconGravity="textStart"
                    app:iconPadding="16dp"
                    app:iconSize="24dp"
                    app:backgroundTint="@android:color/transparent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="12dp"
                    android:background="#1FFFFFFF" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_gallery"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:gravity="start|center_vertical"
                    android:text="@string/choice_from_gallery"
                    android:textSize="16sp"
                    android:textColor="@color/text_color"
                    app:icon="@drawable/ic_gallery"
                    app:iconGravity="textStart"
                    app:iconPadding="16dp"
                    app:iconSize="24dp"
                    app:backgroundTint="@android:color/transparent" />

            </LinearLayout>

        </FrameLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_user_info_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_indent"
        android:backgroundTint="@color/card_view_user_info_bg"
        android:elevation="6dp"
        app:cardCornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_user_image_profile">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/default_indent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_first_name_profile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:padding="@dimen/small_indent"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/default_text_size"
                    tools:text="Вася" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btn_edit_first_name_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_indent"
                    android:backgroundTint="@color/orange"
                    android:src="@drawable/ic_edit"
                    app:fabSize="normal"
                    app:layout_constraintBottom_toBottomOf="@+id/cv_user_image_profile"
                    app:layout_constraintEnd_toEndOf="@+id/cv_user_image_profile"
                    app:shapeAppearance="?attr/floatingActionButtonLargePrimaryStyle"
                    app:tint="@color/enabled_button_text_color" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_indent"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_last_name_profile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:padding="@dimen/small_indent"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/default_text_size"
                    tools:text="Пупкин" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btn_edit_last_name_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_indent"
                    android:backgroundTint="@color/orange"
                    android:src="@drawable/ic_edit"
                    app:fabSize="normal"
                    app:layout_constraintBottom_toBottomOf="@+id/cv_user_image_profile"
                    app:layout_constraintEnd_toEndOf="@+id/cv_user_image_profile"
                    app:shapeAppearance="?attr/floatingActionButtonLargePrimaryStyle"
                    app:tint="@color/enabled_button_text_color" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_indent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_email_profile"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:padding="@dimen/small_indent"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/default_text_size"
                    tools:text="vasya_pupkin@gmail.com" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/large_indent"
        android:layout_marginBottom="@dimen/default_indent"
        android:backgroundTint="@color/button_color"
        android:text="@string/change_password_string"
        android:textColor="@color/button_text_color"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintBottom_toTopOf="@+id/btn_exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/large_indent"
        android:layout_marginBottom="@dimen/large_indent"
        android:backgroundTint="@color/button_color"
        android:text="@string/exit_string"
        android:textColor="@color/button_text_color"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.motion.widget.MotionLayout>